2009-08-29  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-title-read): New.
	(tinydebian-bts-mail-ctrl-retitle): Use
	`tinydebian-bts-mail-title-read' to offer old Subject
	for editing.

2009-08-28  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-severity):
	Correct interactive spec: Call
	'tinydebian-mail-mode-debian-address-ask-bug'.

2009-08-25  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylib.el (ti::set-face-try-list): Improve docstring.

2009-08-21  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mode):
	Correct 'r' to call `tinydebian-bts-mail-type-reply'.

2009-08-20  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-:menu-info): Correct docstring.
	The hook menu is (o), not (h).

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-forwarded-main):
	Fix if-case indent.

2009-08-14  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-notfound):
	Add missing parameter VERSION.
	(tinydebian-bts-mail-ctrl-notfixed): New.
	(tinydebian-bts-mail-ctrl-command-notforwarded): New.
	(tinydebian-bts-mail-ctrl-command-notfixed): New.
	(tinydebian-bts-mail-ctrl-command-notfound): New.
	(tinydebian-bts-mail-ctrl-notforwarded): New.
	(tinydebian-bug-nbr-debian-url-forward): New.
	(tinydebian-mail-mode-debian-address-package-toggle): New.
	(tinydebian-mail-mode-address-type-add): Rename function.
	(tinydebian-bug-gnu-emacs-bts-gnus-summary-line-p): Improve
	Emacs BTS detection.

2009-08-13  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-notfound): New.

2009-08-12  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-found): New.
	(tinydebian-bts-mail-ask-bug-number): Move call to
	`tinydebian-bts-bug-number-trim'.
	(tinydebian-bts-bug-number-trim): Test with `stringp'.
	(tinydebian-bts-mail-ctrl-found): New.
